--- a/server/views/_functions.ejs
+++ b/server/views/_functions.ejs
@@ -22,6 +22,18 @@ formatChangeRatio = function (x) {
     Math.abs((x * 100) - 100).toFixed(2);
 };
 
+formatChangeDelta = function (x) {
+  var map = {"zero" : "", "up" : "+", "down" : ""};
+  return map[formatDeltaClass(x)] + formatWeight(x);
+}
+
+formatDeltaClass = function (x) {
+  if (Math.abs(x) < 0.5) {
+    return "zero";
+  }
+  return x > 0 ? "up" : "down";
+};
+
 formatChangeClass = function (x) {
   if (Math.abs(x - 1) < 0.0001) {
     return "zero";
@@ -41,6 +53,10 @@ formatClass = function (x) {
 
 formatRatio = function (x) {
   return (x * 100).toFixed(2);
+};
+
+formatWeight = function (x) {
+  return x.toFixed(1);
 };
 
 %>
